logging/kibana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-ingress
  namespace: logging
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:064032723992:certificate/f541447e-7795-4238-bfec-61d0945fb7f1
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/backend-protocol: HTTPS
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTPS
    alb.ingress.kubernetes.io/healthcheck-path: /api/status
    external-dns.alpha.kubernetes.io/hostname: kibana.zoumanas.com
spec:
  rules:
    - host: kibana.zoumanas.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zoum-kibana-kb-http
                port:
                  number: 5601
